--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
     transform: scale(1.05);
 }
 
-#city-input {
+#input {
     padding: 15px;
     margin: 10px 0;
     width: 70%;
@@ -34,16 +34,16 @@ body {
     font-size: 16px;
 }
 
-#city-input:focus {
+#input:focus {
     outline: none;
     border-color: #2196F3;
 }
 
-#city-input::placeholder {
+#input::placeholder {
     color: #aaa;
 }
 
-#city-input-btn {
+#input-btn {
     padding: 10px;
     background-color: #2196F3;
     color: #fff;
@@ -53,7 +53,7 @@ body {
     cursor: pointer;
 }
 
-#city-input-btn:hover {
+#input-btn:hover {
     background-color: #1565C0;
 }
 
@@ -76,10 +76,6 @@ body {
     margin-bottom: 10px;
 }
 
-#wind-speed {
-    font-size: 14px;
-}
-
-#date {
+#wind-speed, #date {
     font-size: 14px;
 }
